Add class to manage metadata on users #1

--- a/trunk/assets/scss/admin.scss
+++ b/trunk/assets/scss/admin.scss
@@ -41,3 +41,17 @@
 		}
 	}
 }
+
+
+// User
+.user-metadata-concordamos {
+	margin-top: 2rem;
+
+	.form-table {
+		.field {
+			input {
+				width: 25em;
+			}
+		}
+	}
+}
