WIP - Add single to vote #36 #40

--- a/trunk/assets/scss/settings/mixins.scss
+++ b/trunk/assets/scss/settings/mixins.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 @mixin small {
   @media (max-width: $small-width) {
     @content;
@@ -103,5 +105,5 @@ $base-size: 16;
 //Function to convert px value into rem
 //You can replace rem with any other value you want (rem is most preferred value for web)
 @function size($target, $context: $base-size) {
-    @return ($target / $context) * 1rem;
+    @return calc($target / $context) * 1rem;
 }
