--- a/trunk/assets/scss/atoms/buttons.scss
+++ b/trunk/assets/scss/atoms/buttons.scss
@@ -2,7 +2,7 @@ button {
 	background-color: #FFFFFF;
 	border-radius: 50px;
 	border: 3px solid #000000;
-	padding: .6rem;
+	padding: 0.6rem 1.2rem;
 
 	&.button-full {
 		width: 100%;
@@ -21,5 +21,9 @@ button {
 		padding: 0;
 		text-indent: -9999px;
 		width: 20px;
+	}
+
+	&.link {
+		border-color: transparent;
 	}
 }
