Add icon on buttons of the form voting #36

--- a/trunk/assets/scss/atoms/fields.scss
+++ b/trunk/assets/scss/atoms/fields.scss
@@ -75,6 +75,10 @@ form {
 					align-items: center;
 					display: flex;
 					justify-content: space-between;
+
+					span {
+						font-weight: 700;
+					}
 				}
 
 				&-content {
@@ -145,8 +149,6 @@ form {
 					}
 				}
 			}
-
 		}
-
 	}
 }
