--- a/trunk/assets/scss/voting-page.scss
+++ b/trunk/assets/scss/voting-page.scss
@@ -5,14 +5,32 @@
 	button {
 		&.edit {
 			background-color: transparent;
+			background-image: url(../../assets/images/edit.svg);
+			background-repeat: no-repeat;
+			background-position: left center;
 			border: 0;
-			padding: 0 size(16);
+			border-radius: 0;
+			margin-left: size(16);
+			padding: 0 size(16) 0 size(24);
 		}
 
 		&.trash {
 			background-color: transparent;
+			background-image: url(../../assets/images/trash.svg);
+			background-repeat: no-repeat;
+			background-position: left center;
 			border: 0;
-			padding: 0 size(16);
+			border-radius: 0;
+			margin-left: size(16);
+			padding: 0 size(16) 0 size(24);
+		}
+	}
+
+	label {
+		button {
+			&.trash {
+				text-indent: -9999px;
+			}
 		}
 	}
 }
