--- a/trunk/assets/scss/atoms/fields.scss
+++ b/trunk/assets/scss/atoms/fields.scss
@@ -60,6 +60,19 @@ form {
 		}
 	}
 
+	&-checkbox {
+		label {
+			align-items: center;
+			display: flex;
+			gap: size(8);
+
+			span {
+				display: flex;
+				margin-bottom: 0;
+			}
+		}
+	}
+
 	&-options {
 		.fields {
 			.option {
