--- a/trunk/assets/scss/archive-voting.scss
+++ b/trunk/assets/scss/archive-voting.scss
@@ -56,6 +56,7 @@
 		display: grid;
 		gap: 1rem;
 		grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+		margin: 2rem auto;
 
 		@media screen and (max-width: 20rem) {
 			grid-template-columns: 1fr;
