--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -138,7 +138,7 @@
 		justify-content: center;
 
 		&__cell {
-			background-color: #CCC;
+			background-color: #1114;
 			height: 15px;
 			width: 15px;
 
