--- a/trunk/assets/scss/voting-page.scss
+++ b/trunk/assets/scss/voting-page.scss
@@ -2,19 +2,25 @@
 @import 'atoms/buttons';
 
 #concordamos-voting-form {
+	max-width: 570px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 	
 	.field-checkbox{
 		margin-top: 30px;
 	}
 	.field-text, .field-textarea, .field-checkbox{
 		label{
-			color: #111;
-			font-family: 'Inter Tight' !important;
-			font-size: 16px;
-			font-style: normal;
-			font-weight: 700;
-			line-height: normal;
-			letter-spacing: -0.16px;	
+			
+			span{
+				color: #111;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 700;
+				letter-spacing: -0.16px;
+				font-family: 'Inter Tight';
+			}		
 		}
 	}
 	.title-section{
@@ -26,6 +32,7 @@
 		line-height: 130%; 
 		letter-spacing: -0.24px;
 		padding-right: 15px;
+		color: #000;
 		@media(max-width: 781px){
 			margin-top: 25px;    
 		}
@@ -46,7 +53,7 @@
 		margin-top: 1rem;
 		.label{
 			color: var(--wp--preset--color--black);
-			font-family: 'Libre Franklin' !important;
+			font-family: 'Libre Franklin';
 			font-size: 16px;
 			font-style: normal;
 			font-weight: 700;
@@ -61,8 +68,8 @@
 
 	.radio-options{
 		label{
-			font-weight: 700;
-			font-family: 'Inter Tight' !important;
+			font-weight: bold;
+			font-family: 'Inter Tight', sans-serif;
 		}
 	}
 	.option{
@@ -129,7 +136,7 @@
 .entry-content{
 	
 	h2{
-		font-family: 'Oswald' !important;
+		font-family: 'Oswald';
 		font-size: 48px;
 		font-style: normal;
 		font-weight: 600;
@@ -139,8 +146,8 @@
 	}
 	p{
 		color: var(--wp--preset--color--black);
-		font-family: 'Inter' !important;
-		font-size: 16px !important;
+		font-family: 'Inter';
+		font-size: 16px;
 		font-style: normal;
 		font-weight: 400;
 		line-height: 130%;
