--- a/trunk/assets/scss/template-login.scss
+++ b/trunk/assets/scss/template-login.scss
@@ -16,6 +16,15 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            .balloon-subtitle{
+                font-family: 'Inter';
+                font-size: 20px;
+                font-weight: 500;
+                line-height: 130%;
+                letter-spacing: -0.2px;
+                text-transform: uppercase;
+                color: #000;    
+            }
         }
         
     }
@@ -26,6 +35,14 @@
             width: 100%;
             margin-left: auto;
             margin-right: auto;    
+        }
+        label{
+            color: #111;
+            font-family: 'Inter Tight';
+            font-size: 16px;
+            font-weight: 700;
+            line-height: normal;
+            letter-spacing: -0.16px;
         }
         input{
             border-radius: 8px;
