--- a/trunk/assets/scss/archive-voting.scss
+++ b/trunk/assets/scss/archive-voting.scss
@@ -82,6 +82,9 @@
 		@media screen and (max-width: 20rem) {
 			grid-template-columns: 1fr;
 		}
+		article:nth-of-type(2), article:nth-of-type(5) {
+			box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
+		}
 	}
 
 	.voting-archive-paginator {
