add logo do its nas paginas de login e cadastro

--- a/trunk/assets/scss/template-login.scss
+++ b/trunk/assets/scss/template-login.scss
@@ -101,4 +101,10 @@
             margin-top: 5px;
         }
     }
+    .its-logo{
+        text-align: center;
+        margin: 50px 0;
+    }
+       
+    
 }
