--- a/trunk/assets/scss/template-login.scss
+++ b/trunk/assets/scss/template-login.scss
@@ -26,7 +26,11 @@
                 letter-spacing: -0.2px;
                 text-transform: uppercase;
                 color: #000;
-                margin-top: 210px;    
+                margin-top: 210px;
+                margin-bottom: 24px;    
+            }
+            .with{
+                margin-top: 1px;   
             }
         }
         
@@ -52,7 +56,6 @@
             border-radius: 8px;
             border: 3px solid #000;
             background: #FFF;
-            margin-bottom: 25px;
         }
         .register-submit,
         .login-submit{
@@ -74,6 +77,7 @@
         }
     }
     .login-password-field{
+        margin: 26px 0;
         a{
             font-size: 12px;
             color: #FF2E22;
