--- a/trunk/assets/scss/template-login.scss
+++ b/trunk/assets/scss/template-login.scss
@@ -38,11 +38,13 @@
     .login-form,
     .register-form{
         .container{
-            max-width: 570px;
+            max-width: 576px;
             width: 100%;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 83px;    
+            margin-top: 83px;
+            padding-left: 0;
+            padding-right: 0;    
         }
         label{
             color: #111;
@@ -56,6 +58,8 @@
             border-radius: 8px;
             border: 3px solid #000;
             background: #FFF;
+            width: 100%;
+            height: 51px;
         }
         .register-submit,
         .login-submit{
@@ -76,8 +80,36 @@
             text-align: center;
         }
     }
-    .register-form input{
-        margin-bottom: 20px;
+    .register-form{
+        input{
+            margin-bottom: 20px;
+        }
+        .accept-checkbox-terms,
+        .accept-checkbox-image{
+            display: flex;
+            align-content: center;
+            input{
+                width: 16px;
+                height: 16px;
+                margin-right: 7px;
+                margin-bottom: 18px;
+               
+            }
+            label{
+                color: #000;
+                text-align: center;
+                font-family: 'Inter';
+                font-size: 14px;
+                font-weight: 400;
+                    
+            }
+            a{
+                color: #26A9F9;
+                font-weight: 700;    
+            }
+            
+        }
+    
     }
     .login-password-field{
         margin: 26px 0;
@@ -114,24 +146,6 @@
     }
     .register-button p{
         margin-top: 15px;
-    }
-    .register-terms{
-        max-width: 310px;
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: -14px;
-        p{
-            color: #000;
-            text-align: center;
-            font-family: 'Inter Tight';
-            font-size: 12px;
-            font-weight: 400;    
-        }
-        a{
-            color: #26A9F9;
-            font-weight: 700;    
-        }
     }
     .its-logo{
         text-align: center;
