--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -56,6 +56,17 @@
 				font-weight: 700;
 			}
 
+			p{
+				color: #111;
+				font-family: 'Inter';
+				font-size: 20px;
+				font-style: normal;
+				font-weight: 500;
+				line-height: 130%;
+				letter-spacing: -0.2px;
+				text-transform: uppercase;	
+			}
+
 			.meta {
 				align-items: center;
 				display: flex;
@@ -92,6 +103,13 @@
 							display: none;
 						}
 					}
+				}
+				.author{
+					color: #000;
+					font-family: 'Inter Tight';
+					font-size: 12px;
+					font-weight: 400;
+					letter-spacing: -0.12px;	
 				}
 			}
 		}
@@ -217,6 +235,16 @@
 			}
 
 			.content {
+				padding-top: 63px;
+				h2{
+					color: #111;
+					font-family: 'Oswald';
+					font-size: 32px;
+					font-weight: 700;
+					line-height: 130%;
+					letter-spacing: -0.32px;
+					text-transform: uppercase;
+				}
 				.option-voting {
 					align-items: center;
 					background-color: #FFFFFF;
@@ -241,13 +269,22 @@
 					> div {
 						h3 {
 							font-size: 24px;
-							margin-bottom: 0;
-							margin-top: 0;
+							margin-bottom: 26px;
+							margin-top: -10px;
 							font-family: 'Oswald';
 							font-weight: 500;
 							line-height: 130%;
 							letter-spacing: -0.24px;
 							color: #000;
+						}
+						p{
+							font-family: 'Inter';
+							font-size: 14px;
+							font-weight: 600;
+							line-height: 150%;
+							letter-spacing: -0.14px;
+							text-transform: uppercase;
+							color: #000;	
 						}
 
 						.option-voting-vote {
@@ -291,15 +328,6 @@
 				}
 
 				&.view-mode {
-					h2{
-						color: #111;
-						font-family: 'Oswald';
-						font-size: 32px;
-						font-weight: 700;
-						line-height: 130%;
-						letter-spacing: -0.32px;
-						text-transform: uppercase;
-					}
 					.options {
 						display: grid;
 						grid-template-columns: 1fr 1fr;
@@ -315,10 +343,30 @@
 							margin-bottom: 0;
 						}
 					}
+					
 				}
 
 				.votings-list {
 					padding-top: 4rem;
+				}
+
+				&.voting-mode{
+					h2{
+						margin-bottom: 22px;
+					}
+					p{
+						color: #111;
+						font-family: 'Inter';
+						font-size: 20px;
+						font-weight: 600;
+						line-height: 130%;
+						letter-spacing: -0.2px;
+						text-transform: uppercase;
+						margin-bottom: 20px;
+					}
+					form{
+						margin-top: 77px;
+					}
 				}
 			}
 
@@ -336,6 +384,13 @@
 				span {
 					display: block;
 					text-align: center;
+					font-family: 'Inter';
+					font-size: 20px;
+					font-weight: 500;
+					line-height: 130%;
+					letter-spacing: -0.2px;
+					text-transform: uppercase;
+					color: #000;
 				}
 			}
 		}
@@ -349,22 +404,66 @@
 			button {
 				background-color: #FFF766;
 				display: flex;
+				border-radius: 80px;
+				border: 3px solid #000;
+				font-family: 'Oswald';
+				font-size: 24px;
+				font-weight: medium;
+				line-height: 130%;
+				letter-spacing: 0.24px;
+				color: #111;
+				max-width: 278px;;
+				width: 100%;
+				padding: 10px 27px 8px;
 			}
 
 			.back-link {
 				cursor: pointer;
-				text-decoration: underline;
-			}
-		}
-
-		.voting-modal {
-			.button.primary {
-				background-color: #FFF766;
+				color: #000;
+				font-family: 'Inter';
+				font-size: 14px;
+				font-weight: 600;
+				line-height: 150%;
+				letter-spacing: -0.14px;
+				text-transform: uppercase;
+				border-bottom: solid 3px #000;
 			}
 		}
 
 		// Panel
 		&.is-panel {
+		}
+	}
+	.voting-modal {
+		max-width: 569px;
+		width: 100%;
+		max-height: 313px;
+		main{
+			h2{
+				margin-top: 5px;
+				font-family: 'Oswald';
+				font-size: 32px;
+				font-weight: 500;
+				line-height: 130%;
+				letter-spacing: -0.32px;
+				text-transform: capitalize;
+			}
+			p{
+				text-align: center;
+			}
+		}
+		
+		.button.primary {
+			background-color: #FFF766;
+			border-radius: 80px;
+			border: 3px solid #000;
+			padding: 18px 24px;
+			color: #000;
+			font-family: 'Oswald';
+			font-size: 24px;
+			font-weight: 500;
+			line-height: 130%;
+			letter-spacing: -0.24px;
 		}
 	}
 }
