--- a/trunk/assets/scss/atoms/buttons.scss
+++ b/trunk/assets/scss/atoms/buttons.scss
@@ -27,4 +27,17 @@ button {
 	&.link {
 		border-color: transparent;
 	}
+
+	&.primary {
+		background-color: #FFF766;
+		border-radius: 80px;
+		border: 3px solid #000;
+		padding: 18px 24px;
+		color: #000;
+		font-family: 'Oswald';
+		font-size: 24px;
+		font-weight: 500;
+		line-height: 130%;
+		letter-spacing: -0.24px;
+	}
 }
