--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -430,10 +430,97 @@
 				border-bottom: solid 3px #000;
 			}
 		}
+	}
 
-		// Panel
-		&.is-panel {
+	&.logged-in{
+		.voting-header{
+			p{
+				color: #111;
+				font-family: 'Inter Tight';
+				font-size: 16px;
+				font-weight: 400;
+				line-height: 150%;
+				letter-spacing: -0.16px;
+				text-transform: none;
+			}
+			.meta{
+				span{
+					font-family: 'Oswald';
+					font-size: 24px;					
+					font-weight: 500;
+					line-height: 130%; 
+					letter-spacing: -0.24px;
+					color: #000;
+					img{
+						margin-top: -4px;
+						margin-right: 5px;
+					}
+				}
+			}
+			.dates{
+				.start-edit,
+				.end-edit{
+					color: #000;
+					font-family: 'Inter Tight';
+					font-size: 16px;
+					font-weight: 700;
+					line-height: normal;
+					letter-spacing: -0.16px;
+					text-decoration-line: underline;
+					text-transform: none;
+				}
+			}	
 		}
+		.voting-content{
+			border: none;
+			.panel-tabs{
+				width: 100%;
+				display: grid;
+				grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
+				button{
+					background-color: transparent;
+					padding-top: 21px;
+					padding-bottom: 23px;
+					color: #000;
+					text-align: center;
+					font-family: 'Oswald';
+					font-size: 24px;
+					font-weight: 500;
+					line-height: 130%;
+					letter-spacing: -0.24px;
+					text-transform: uppercase;
+				}
+				
+				.panel-tab{
+					border-top: 3px solid #000;
+					border-bottom: 3px solid #000;
+					
+				}
+				.selected{
+					border: none;
+					border-top: 3px solid #000;
+					border-bottom: none;
+					
+				}
+				.panel-previous-tab{
+					padding-left: 52px;
+					border-bottom: 3px solid #000;
+					border-right: 3px solid #000;
+					border-top: 3px solid #000;
+				}
+				.panel-next-tab{
+					padding-right: 52px;
+					border-bottom: 3px solid #000;
+					border-left: 3px solid #000;
+					border-top: 3px solid #000;	
+				}
+			}
+			.wrapper{
+				.votings-list{
+					padding-top: 0;
+				}
+			}	
+		}	
 	}
 	.voting-modal {
 		max-width: 569px;
@@ -452,19 +539,6 @@
 			p{
 				text-align: center;
 			}
-		}
-
-		.button.primary {
-			background-color: #FFF766;
-			border-radius: 80px;
-			border: 3px solid #000;
-			padding: 18px 24px;
-			color: #000;
-			font-family: 'Oswald';
-			font-size: 24px;
-			font-weight: 500;
-			line-height: 130%;
-			letter-spacing: -0.24px;
 		}
 	}
 }
