--- a/trunk/assets/scss/archive-voting.scss
+++ b/trunk/assets/scss/archive-voting.scss
@@ -20,7 +20,7 @@
 	.voting-archive-header {
 
 		h1 {
-			font-family: 'Oswald' !important;
+			font-family: 'Oswald';
 			font-size: 64px;
 			text-align: center;
 			text-transform: uppercase;
@@ -73,6 +73,33 @@
 		}
 	}
 
+	details{
+		
+		>summary{
+			display: flex;
+			color: var(--low-light, #666);
+			font-family: 'Oswald';
+			font-size: var(--wp--preset--font-size-medium);
+			font-weight: 500;
+
+			letter-spacing: -0.24px;
+			margin-top: 16px;
+			margin-bottom: 16px;
+			margin-left: 32px;
+			gap: 80px;
+
+			&:after{
+				content: '';
+				background-image: url(../../assets/images/filter.svg);
+				width: 32px;
+				height: 32px;
+				background-repeat: no-repeat;
+				position: relative;
+				background-size: 100%;
+			}
+		}
+	}
+
 	.voting-archive-grid {
 		display: grid;
 		gap: 1rem;
@@ -82,7 +109,7 @@
 		@media screen and (max-width: 20rem) {
 			grid-template-columns: 1fr;
 		}
-		article:nth-of-type(2), article:nth-of-type(5) {
+		article:nth-of-type(3n + 2) {
 			box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
 		}
 	}
